--- a/blocks/Footer.module.css
+++ b/blocks/Footer.module.css
@@ -88,7 +88,7 @@
 
 .label {
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 700;
   white-space: nowrap;
   color: var(--text);
 }
