--- a/components/BentoCard.module.css
+++ b/components/BentoCard.module.css
@@ -85,7 +85,7 @@
 }
 
 .description {
-  font-size: 0.95rem;
+  font-size: 1rem;
   line-height: 1.5;
   margin: 0 0 1rem 0;
   opacity: 0.9;
