--- a/components/Button.module.css
+++ b/components/Button.module.css
@@ -1,18 +1,16 @@
 .container {
   position: relative;
   border-radius: var(--radius-md);
-  font-weight: 600;
+  font-weight: 700;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   transition: var(--transition-fast);
   transition-property: transform, box-shadow, background, color, border-color;
   top: 0;
-  /* border: none; */
   cursor: pointer;
   user-select: none;
   text-align: center;
-  line-height: 1.4;
   white-space: nowrap;
   overflow: hidden;
 }
